--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <li class="nav-item btn btn-dark text-light">
                         <a class="nav-link" href="#">Get Started</a>
                     </li>
+                    <li class="nav-item btn btn-dark text-light">
+                        <a class="nav-link" href="#">Get Started</a>
+                    </li>
     
     
                 </ul>
